; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/audio/dsp_filters/extr_reverb.c_revmodel_setroomsize.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/audio/dsp_filters/extr_reverb.c_revmodel_setroomsize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.revmodel = type { i64 }

@scaleroom = common dso_local global float 0.000000e+00, align 4
@offsetroom = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.revmodel*, float)* @revmodel_setroomsize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @revmodel_setroomsize(%struct.revmodel* %0, float %1) #0 {
  %3 = alloca %struct.revmodel*, align 8
  %4 = alloca float, align 4
  store %struct.revmodel* %0, %struct.revmodel** %3, align 8
  store float %1, float* %4, align 4
  %5 = load float, float* %4, align 4
  %6 = load float, float* @scaleroom, align 4
  %7 = fmul float %5, %6
  %8 = load i64, i64* @offsetroom, align 8
  %9 = sitofp i64 %8 to float
  %10 = fadd float %7, %9
  %11 = fptosi float %10 to i64
  %12 = load %struct.revmodel*, %struct.revmodel** %3, align 8
  %13 = getelementptr inbounds %struct.revmodel, %struct.revmodel* %12, i32 0, i32 0
  store i64 %11, i64* %13, align 8
  %14 = load %struct.revmodel*, %struct.revmodel** %3, align 8
  %15 = call i32 @revmodel_update(%struct.revmodel* %14)
  ret void
}

declare dso_local i32 @revmodel_update(%struct.revmodel*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
